--- a/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Ontap/3.md
+++ b/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Ontap/3.md
@@ -8,7 +8,7 @@
    
    - [ ] Collision domain
    
-   - [ ] Broadcast domain
+   - [x] Broadcast domain
    
    - [ ] Subnet
    
@@ -24,7 +24,7 @@
    
    - [ ] 2
    
-   - [ ] 3
+   - [x] 3
    
    - [ ] You cannot tell from the information provided.
 
@@ -32,7 +32,7 @@
    
    - [ ] Inserts a 4-byte header and does change the MAC addresses
    
-   - [ ] Inserts a 4-byte header and does not change the MAC addresses
+   - [x] Inserts a 4-byte header and does not change the MAC addresses
    
    - [ ] Encapsulates the original frame behind an entirely new Ethernet header
    
@@ -40,17 +40,13 @@
 
 ### Cấu hình và xác minh VLAN và VLAN trunking
 
-### Giải quyết sự cố về VLANs và VLAN Trucks
-
-## 2. Khái niệm giao thức STP
-
 4. Imagine that you are told that switch 1 is configured with the dynamic auto paramete for trunking on its Fa0/5 interface, which is connected to switch 2. You have to configure switch 2. Which of the following settings for trunking could allow trunking to work? (Choose two answers.)
    
-   - [ ] on 
+   - [x] on 
    
    - [ ] dynamic auto
    
-   - [ ] dynamic desirable
+   - [x] dynamic desirable
    
    - [ ] access
    
@@ -58,9 +54,9 @@
 
 5. A switch has just arrived from Cisco. The switch has never been configured with any VLANs, but VTP has been disabled. An engineer configures the vlan 22 and name Hannahs-VLAN commands and then exits configuration mode. Which of the following are true? (Choose two answers.)
    
-   - [ ] VLAN 22 is listed in the output of the show vlan brief command.
+   - [x] VLAN 22 is listed in the output of the show vlan brief command.
    
-   - [ ] VLAN 22 is listed in the output of the show running-config command.
+   - [x] VLAN 22 is listed in the output of the show running-config command.
    
    - [ ] VLAN 22 is not created by this process.
    
@@ -70,19 +66,19 @@
    
    - [ ] show interfaces
    
-   - [ ] show interfaces switchport
+   - [x] show interfaces switchport
    
-   - [ ] show interfaces trunk
+   - [x] show interfaces trunk
    
    - [ ] show trunks
 
-## 3. Cấu hình RSTP và EtherChannel
+### Giải quyết sự cố về VLANs và VLAN Trucks
 
 7. In a switch that disables VTP, an engineer configures the commands vlan 30 and shutdown vlan 30. Which answers should be true about this switch? (Choose two answers.)
    
-   - [ ] The show vlan brief command should list VLAN 30.
+   - [x] The show vlan brief command should list VLAN 30.
    
-   - [ ] The show running-config command should list VLAN 30.
+   - [x] The show running-config command should list VLAN 30.
    
    - [ ] The switch should forward frames that arrive in access ports in VLAN 30.
    
@@ -92,8 +88,157 @@
    
    - [ ] A shutdown vlan 30 global command
    
-   - [ ] A switchport trunk allowed vlan interface subcommand
+   - [x] A switchport trunk allowed vlan interface subcommand
    
    - [ ] An STP choice to block on G0/1
    
    - [ ] A no vlan 30 global command
+
+## 2. Khái niệm giao thức STP
+
+## Cơ bản về STP và RSTP
+
+1. Which of the following port states are stable states used when STP has completed convergence? (Choose two answers.)
+   
+   - [x] Blocking
+   
+   - [x] Forwarding
+   
+   - [ ] Listening
+   
+   - [ ] Learning
+   
+   - [ ] Discarding
+
+2. Which of the following bridge IDs wins election as root, assuming that the switches
+   with these bridge IDs are in the same network?
+   
+   - [ ] 32769:0200.1111.1111
+   
+   - [ ] 32769:0200.2222.2222
+   
+   - [x] 4097:0200.1111.1111
+   
+   - [ ] 4097:0200.2222.2222
+   
+   - [ ] 40961:0200.1111.1111
+
+### Cụ thể về STP
+
+3. Which of the following are transitory port states used only during the process of STP convergence? (Choose two answers.)
+   
+   - [ ] Blocking
+   
+   - [ ] Forwarding
+   
+   - [x] Listening
+   
+   - [x] Learning
+   
+   - [ ] Discarding
+
+4. Which of the following facts determines how often a nonroot bridge or switch sends an STP Hello BPDU message?
+   
+   - [ ] The Hello timer as configured on that switch.
+   
+   - [x] The Hello timer as configured on the root switch.
+   
+   - [ ] It is always every 2 seconds.
+   
+   - [ ] The switch reacts to BPDUs received from the root switch by sending another BPDU 2 seconds after receiving the root BPDU.
+
+### Khái niệm Rapid STP
+
+5. Which of the following RSTP port states have the same name and purpose as a port state in traditional STP? (Choose two answers.)
+   
+   - [ ] Blocking
+   
+   - [x] Forwarding
+   
+   - [ ] Listening
+   
+   - [x] Learning
+   
+   - [ ] Discarding
+
+6. RSTP adds features beyond STP that enable ports to be used for a role if another port on the same switch fails. Which of the following statements correctly describe a port role that is waiting to take over for another port role? (Choose two answers.)
+   
+   - [x] An alternate port waits to become a root port.
+   
+   - [ ] A backup port waits to become a root port.
+   
+   - [x] An alternate port waits to become a designated port.
+   
+   - [ ] A backup port waits to become a designated port.
+
+7. What STP feature causes an interface to be placed in the forwarding state as soon as
+   the interface is physically acti ?
+   
+   - [ ] STP
+   
+   - [ ] EtherChannel
+   
+   - [ ] Root Guard
+   
+   - [x] PortFast
+
+## 3. Cấu hình RSTP và EtherChannel
+
+### Hiểu sâu về cấu hình RSTP
+
+1. Which type value on the spanning-tree mode type global command enables the use of RSTP?
+   - [x] rapid-pvst
+   
+   - [ ] pvst
+   
+   - [ ] rstp
+   
+   - [ ] rpvst
+
+2. Examine the following output from the show spanning-tree vlan 5 command, which describes a root switch in a LAN. 
+   
+   ![Screenshot 2022-04-02 151842.png](https://raw.githubusercontent.com/Zenfection/Image/master/2022/04/02-15-18-56-Screenshot%202022-04-02%20151842.png)
+   
+   Which answers accurately describe facts related to the root’s bridge ID?
+   - [x] The system ID extension value, in decimal, is 5.
+   
+   - [ ] The root’s configured priority value is 32773.
+   
+   - [x] The root’s configured priority value is 32768.
+   
+   - [ ] The system ID extension value, in hexadecimal, is 1833.9d7b.0e80.
+
+3. With the Cisco RPVST+, which of the following action(s) does a switch take to identify which VLAN is described by a BPDU? (Choose three answers.)
+   - [x] Adds a VLAN tag when forwarding a BPDU on trunks
+   - [x] Adds the VLAN ID in an extra TLV in the BPDU
+   - [ ] Lists the VLAN ID as the middle 12 bits of the System ID field of the BPDU
+   - [x] Lists the VLAN ID in the System ID Extension field of the BPDU
+
+### Triển khai EtherChanel
+
+4. An engineer configures a switch to put interfaces G0/1 and G0/2 into the same Layer 2 EtherChannel. Which of the following terms is used in the configuration commands?
+   
+   - [ ] EtherChannel
+   - [ ] PortChannel
+   - [ ] Ethernet-Channel
+   - [x] Channel-group
+
+5. Which combinations of keywords on the channel-group interface subcommand on two neighboring switches will cause the switches to use LACP and attempt to add the link to the EtherChannel? (Choose two answers.)
+   
+   - [ ] desirable and active
+   
+   - [x] passive and active
+   
+   - [ ] active and auto
+   
+   - [x] active and active
+
+6. A Cisco Catalyst switch needs to send frames over a Layer 2 EtherChannel. Which answer best describes how the switch balances the traffic over the four active links in the channel?
+   
+   - [ ] Breaks each frame into fragments of approximately one-fourth of the original frame, sending one fragment over each link
+   
+   - [ ] Sends the entire frame over one link, alternating links in sequence for each successive frame
+   
+   - [x] Sends the entire frame over one link, choosing the link by applying some math to fields in each frame’s headers
+   
+   - [ ] Sends the entire frame over one link, using the link with the lowest percent utilization as the next link to use
