--- a/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Ontap/4.md
+++ b/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Ontap/4.md
@@ -2,152 +2,18 @@
 
 ## 1.Quan niệm về IPv4 subnetting
 
-### Cơ bản về STP và RSTP
-
-1. Which of the following port states are stable states used when STP has completed convergence? (Choose two answers.)
-   
-   - [ ] Blocking
-   
-   - [ ] Forwarding
-   
-   - [ ] Listening
-   
-   - [ ] Learning
-   
-   - [ ] Discarding
-
-2. Which of the following bridge IDs wins election as root, assuming that the switches
-   with these bridge IDs are in the same network?
-   
-   - [ ] 32769:0200.1111.1111
-   
-   - [ ] 32769:0200.2222.2222
-   
-   - [ ] 4097:0200.1111.1111
-   
-   - [ ] 4097:0200.2222.2222
-   
-   - [ ] 40961:0200.1111.1111
-
-3. Which of the following are transitory port states used only during the process of STP convergence? (Choose two answers.)
-   
-   - [ ] Blocking
-   
-   - [ ] Forwarding
-   
-   - [ ] Listening
-   
-   - [ ] Learning
-   
-   - [ ] Discarding
-
-4. Which of the following facts determines how often a nonroot bridge or switch sends an STP Hello BPDU message?
-   
-   - [ ] The Hello timer as configured on that switch.
-   
-   - [ ] The Hello timer as configured on the root switch.
-   
-   - [ ] It is always every 2 seconds.
-   
-   - [ ] The switch reacts to BPDUs received from the root switch by sending another BPDU 2 seconds after receiving the root BPDU.
-
-### Khái niệm Rapid STP
-
-5. Which of the following RSTP port states have the same name and purpose as a port state in traditional STP? (Choose two answers.)
-- [ ] Blocking
-
-- [ ] Forwarding
-
-- [ ] Listening
-
-- [ ] Learning
-
-- [ ] Discarding
-6. RSTP adds features beyond STP that enable ports to be used for a role if another port on the same switch fails. Which of the following statements correctly describe a port role that is waiting to take over for another port role? (Choose two answers.)
-   
-   - [ ] An alternate port waits to become a root port.
-   
-   - [ ] A backup port waits to become a root port.
-   
-   - [ ] An alternate port waits to become a designated port.
-   
-   - [ ] A backup port waits to become a designated port.
-
-7. What STP feature causes an interface to be placed in the forwarding state as soon as
-   the interface is physically acti ?
-   
-   - [ ] STP
-   
-   - [ ] EtherChannel
-   
-   - [ ] Root Guard
-   
-   - [ ] PortFast
-
-## 2.Phân tích mạng phân lớp IPv4
-
-### Hiểu sâu về cấu hình RSTP
-
-1. Which type value on the spanning-tree mode type global command enables the use of RSTP?
-- [ ] rapid-pvst
-
-- [ ] pvst
-
-- [ ] rstp 
-
-- [ ] rpvst
-2. Examine the following output from the show spanning-tree vlan 5 command, which describes a root switch in a LAN. Which answers accurately describe facts related to the root’s bridge ID?
-- [ ] The system ID extension value, in decimal, is 5.
-- [ ] The root’s configured priority value is 32773.
-- [ ] The root’s configured priority value is 32768.
-- [ ] The system ID extension value, in hexadecimal, is 1833.9d7b.0e80.
-3. With the Cisco RPVST+, which of the following action(s) does a switch take to identify
-   which VLAN is described by a BPDU? (Choose three answers.)
-   - [ ] Adds a VLAN tag when forwarding a BPDU on trunks
-     b. Adds the VLAN ID in an extra TLV in the BPDU
-     c. Lists the VLAN ID as the middle 12 bits of the System ID field of the BPDU
-     d. Lists the VLAN ID in the System ID Extension field of the BPDU
-
-### Triển khai EtherChanel
-
-An engineer configures a switch to put interfaces G0/1 and G0/2 into the same Layer 2
-EtherChannel. Which of the following terms is used in the configuration commands?
-
-- [ ] EtherChannel
-  b. PortChannel
-  c. Ethernet-Channel
-  d. Channel-group
-5. Which combinations of keywords on the channel-group interface subcommand on
-   two neighboring switches will cause the switches to use LACP and attempt to add the
-   link to the EtherChannel? (Choose two answers.)
-   - [ ] desirable and active
-     b. passive and active
-     c. active and auto
-     d. active and active
-   6. A Cisco Catalyst switch needs to send frames over a Layer 2 EtherChannel. Which
-      answer best describes how the switch balances the traffic over the four active links in
-      the chann- [ ] ?
-      a. Breaks each frame into fragments of approximately one-fourth of the original
-      frame, sending one fragment over each link
-      b. Sends the entire frame over one link, alternating links in sequence for each successive
-      frame
-      c. Sends the entire frame over one link, choosing the link by applying some math to
-      fields in each frame’s headers
-      d. Sends the entire frame over one link, using the link with the lowest percent utilization
-      as the next link to use
-
-## 3.Phân tích subnet mask
-
 ### Phân tích yêu cầu
 
 1. Host A is a PC, connected to switch SW1 and assigned to VLAN 1. Which of the following are typically assigned an IP address in the same subnet as host A? (Choose two answers.)
-- [ ] The local router’s WAN interface
+   
+   - [ ] The local router’s WAN interface
+   
+   - [x] The local router’s LAN interface
+   
+   - [ ] All other hosts attached to the same switch
+   
+   - [x] Other hosts attached to the same switch and also in VLAN 1
 
-- [ ] The local router’s LAN interface
-
-- [ ] All other hosts attached to the same switch
-
-- [ ] Other hosts attached to the same switch and also in VLAN 1
 2. Why does the formula for the number of hosts per subnet (2H – 2) require the subtraction of two hosts?
    
    - [ ] To reserve two addresses for redundant default gateways (routers)
@@ -156,89 +22,252 @@ EtherChannel. Which of the following terms is used in the configuration commands
    
    - [ ] To reserve addresses for the subnet ID and default gateway (router)
    
-   - [ ] To reserve addresses for the subnet broadcast address and subnet ID
+   - [x] To reserve addresses for the subnet broadcast address and subnet ID
 
 3. A Class B network needs to be subnetted such that it supports 100 subnets and 100 hosts/subnet. Which of the following answers list a workable combination for the number of network, subnet, and host bits? (Choose two answers.)
    
    - [ ] Network = 16, subnet = 7, host = 7
-   - [ ] Network = 16, subnet = 8, host = 8
-   - [ ] Network = 16, subnet = 9, host = 7
+   - [x] Network = 16, subnet = 8, host = 8
+   - [x] Network = 16, subnet = 9, host = 7
    - [ ] Network = 8, subnet = 7, host = 17
 
 ### Lựa chọn thiết kế
 
 4. Which of the following are private IP networks? (Choose two answers.)
-   - [ ] 172.31.0.0
+   
+   - [x] 172.31.0.0
    - [ ] 172.32.0.0
-   - [ ] 192.168.255.0
+   - [x] 192.168.255.0
    - [ ] 192.1.168.0
    - [ ] 11.0.0.0
+
 5. Which of the following are public IP networks? (Choose three answers.)
-   - [ ] 9.0.0.0
+   
+   - [x] 9.0.0.0
    - [ ] 172.30.0.0
    - [ ] 192.168.255.0
-   - [ ] 192.1.168.0
-   - [ ] 1.0.0.0
+   - [x] 192.1.168.0
+   - [x] 1.0.0.0
 
-Before Class B network 172.16.0.0 is subnetted by a network engineer, what parts of the structure of the IP addresses in this network already exist, with a specific size? (Choose two answers.)
+6. Before Class B network 172.16.0.0 is subnetted by a network engineer, what parts of the structure of the IP addresses in this network already exist, with a specific size? (Choose two answers.)
+   
+   - [x] Network
+   
+   - [ ] Subnet
+   
+   - [x] Host
+   
+   - [ ] Broadcast
 
-- [ ] Network
-
-- [ ] Subnet
-
-- [ ] Host
-
-- [ ] Broadcast
-7. A network engineer spends time thinking about the entire Class B network 172.16.0.0
-   and how to subnet that network. He then chooses how to subnet this Class B network
-   and creates an addressing and subnetting plan, on paper, showing his choices.
-   If you compare his thoughts about this network before subnetting the network to his
-   thoughts about this network after mentally subnetting the network, which of the following
-   occurred to the parts of the structure of addresses in this network?
+7. A network engineer spends time thinking about the entire Class B network 172.16.0.0 and how to subnet that network. He then chooses how to subnet this Class B network and creates an addressing and subnetting plan, on paper, showing his choices. If you compare his thoughts about this network before subnetting the network to his thoughts about this network after mentally subnetting the network, which of the following occurred to the parts of the structure of addresses in this network?
+   
    - [ ] The subnet part got smaller.
-     b. The host part got smaller.
-     c. The network part got smaller.
-     d. The host part was removed.
-     e. The network part was removed.
+   - [x] The host part got smaller.
+   - [ ] The network part got smaller.
+   - [ ] The host part was removed.
+   - [ ] The network part was removed.
 
-## 4.Phân tích subnet hiện có
+## 2.Phân tích mạng phân lớp IPv4
 
 ### Khái niệm mạng phân lớp
 
-Which of the following are not valid Class A network IDs? (Choose two answers.)
+1. Which of the following are not valid Class A network IDs? (Choose two answers.)
+   
+   - [ ] 1.0.0.0
+   
+   - [x] 130.0.0.0
+   
+   - [x] 127.0.0.0
+   
+   - [ ] 9.0.0.0
 
-- [ ] 1.0.0.0
-
-- [ ] 130.0.0.0
-
-- [ ] 127.0.0.0
-
-- [ ] 9.0.0.0
 2. Which of the following are not valid Class B network IDs?
+   
    - [ ] 130.0.0.0
    - [ ] 191.255.0.0
    - [ ] 128.0.0.0
    - [ ] 150.255.0.0
-   - [ ] All are valid Class B network IDs.
+   - [x] All are valid Class B network IDs.
+
 3. Which of the following are true about IP address 172.16.99.45’s IP network? (Choose two answers.)
+   
    - [ ] The network ID is 172.0.0.0.
    
    - [ ] The network is a Class B network.
    
-   - [ ] The default mask for the network is 255.255.255.0.
+   - [x] The default mask for the network is 255.255.255.0.
    
-   - [ ] The number of host bits in the unsubnetted network is 16.
+   - [x] The number of host bits in the unsubnetted network is 16.
 
 4. Which of the following are true about IP address 192.168.6.7’s IP network? (Choose two answers.)
-   - [ ] The network ID is 192.168.6.0.
+   
+   - [x] The network ID is 192.168.6.0.
    - [ ] The network is a Class B network.
-   - [ ] The default mask for the network is 255.255.255.0.
+   - [x] The default mask for the network is 255.255.255.0.
    - [ ] The number of host bits in the unsubnetted network is 16.
+
 5. Which of the following is a network broadcast address ?
+   
    - [ ] 10.1.255.255
    
    - [ ] 192.168.255.1
    
    - [ ] 224.1.1.255
    
-   - [ ] 172.30.255.255
+   - [x] 172.30.255.255
+
+## 3.Phân tích subnet mask
+
+### Chuyển Subnet Mask
+
+1. Which of the following answers lists the prefix (CIDR) format equivalent of 255.255.254.0?
+   
+   - [ ] /19
+   
+   - [ ] /20
+   
+   - [x] /23
+   
+   - [ ] /24
+   
+   - [ ] /25
+
+2. Which of the following answers lists the prefix (CIDR) format equivalent of 255.255.255.240?
+   
+   - [ ] /26
+   
+   - [x] /28
+   
+   - [ ] /27
+   
+   - [ ] /30
+   
+   - [ ] /29
+
+3. Which of the following answers lists the dotted-decimal notation (DDN) equivalent of /30?
+   
+   - [ ] 255.255.255.192
+   
+   - [x] 255.255.255.252
+   
+   - [ ] 255.255.255.240
+   
+   - [ ] 255.255.254.0
+   
+   - [ ] 255.255.255.0
+
+### Định đạng địa chỉ IPv4
+
+4. Working at the help desk, you receive a call and learn a user’s PC IP address and mask (10.55.66.77, mask 255.255.255.0). When thinking about this using classful logic, you determine the number of network (N), subnet (S), and host (H) bits. Which of the following is true in this case?
+   
+   - [ ] N=12
+   
+   - [ ] S=12
+   
+   - [x] H=8
+   
+   - [ ] S=8
+   
+   - [ ] N=24
+
+5. Working at the help desk, you receive a call and learn a user’s PC IP address and mas (192.168.9.1/27). When thinking about this using classful logic, you determine the number of network (N), subnet (S), and host (H) bits. Which of the following is true in this case?
+   
+   - [x] N=24
+   
+   - [ ] S=24
+   
+   - [ ] H=8
+   
+   - [ ] H=7
+
+6. Which of the following statements is true about classless IP addressing concepts?
+   
+   - [ ] Uses a 128-bit IP address
+   
+   - [ ] Applies only for Class A and B networks
+   
+   - [ ] Separates IP addresses into network, subnet, and host parts
+   
+   - [x] Ignores Class A, B, and C network rules
+
+7. Which of the following masks, when used as the only mask within a Class B network, would supply enough subnet bits to support 100 subnets (Choose two.)
+   
+   - [x] /24
+   
+   - [x] 255.255.255.252
+   
+   - [ ] /20
+   
+   - [ ] 255.255.252.0
+
+## 4.Phân tích subnet hiện có
+
+### Định nghĩa Subnet
+
+1. When you think about an IP address using classful addressing rules, an address can have three parts: network, subnet, and host. If you examined all the addresses in one subnet, in binary, which of the following answers correctly states which of the three parts of the addresses will be equal among all addresses? (Choose the best answer.)
+   
+   - [ ] Network part only
+   
+   - [ ] Subnet part only
+   
+   - [ ] Host part only
+   
+   - [x] Network and subnet parts
+   
+   - [ ] Subnet and host parts
+
+### Phân tích subnet nhị phân hiện có
+
+2. Which of the following statements are true regarding the binary subnet ID, subnet broadcast address, and host IP address values in any single subnet? (Choose two answers.)
+   
+   - [ ] The host part of the broadcast address is all binary 0s.
+   
+   - [x] The host part of the subnet ID is all binary 0s.
+   
+   - [ ] The host part of a usable IP address can have all binary 1s.
+   
+   - [x] The host part of any usable IP address must not be all binary 0s.
+
+### Phân tích subnet thập phân hiện có
+
+3. Which of the following is the resident subnet ID for IP address 10.7.99.133/24?
+   
+   - [ ] 10.0.0.0
+   
+   - [ ] 10.7.0.0
+   
+   - [x] 10.7.99.0
+   
+   - [ ] 10.7.99.128
+
+4. Which of the following is the resident subnet for IP address 192.168.44.97/30?
+   
+   - [ ] 192.168.44.0
+   
+   - [ ] 192.168.44.64
+   
+   - [x] 192.168.44.96
+   
+   - [ ] 192.168.44.128
+
+5. Which of the following is the subnet broadcast address for the subnet in which IP address 172.31.77.201/27 resides?
+   
+   - [ ] 172.31.201.255
+   
+   - [ ] 172.31.255.255
+   
+   - [x] 172.31.77.223
+   
+   - [ ] 172.31.77.207
+
+6. A fellow engineer tells you to configure the DHCP server to lease the last 100 usable IP addresses in subnet 10.1.4.0/23. Which of the following IP addresses could be leased as a result of your new configuration?
+   
+   - [ ] 10.1.4.156
+   
+   - [ ] 10.1.4.254
+   
+   - [x] 10.1.5.200
+   
+   - [ ] 10.1.7.200
+   
+   - [ ] 10.1.255.200
