--- a/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Ontap/2.md
+++ b/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Ontap/2.md
@@ -6,9 +6,9 @@
 
 1. In what modes can you type the command show mac address-table and expect to get a response with MAC table entries? (Choose two answers.)
    
-   - [ ] User mode
+   - [x] User mode
    
-   - [ ] Enable mode
+   - [x] Enable mode
    
    - [ ] Global configuration mode
    
@@ -18,7 +18,7 @@
    
    - [ ] User mode
    
-   - [ ] Enable mode
+   - [x] Enable mode
    
    - [ ] Global configuration mode
    
@@ -28,7 +28,7 @@
    
    - [ ] SSH encrypts the passwords used at login, but not other traffic; Telnet encrypts nothing.
    
-   - [ ] SSH encrypts all data exchange, including login passwords; Telnet encrypts nothing.
+   - [x] SSH encrypts all data exchange, including login passwords; Telnet encrypts nothing.
    
    - [ ] Telnet is used from Microsoft operating systems, and SSH is used from UNIX and Linux operating systems.
    
@@ -38,7 +38,7 @@
 
 4. What type of switch memory is used to store the configuration used by the switch when it is up and working?
    
-   - [ ] RAM
+   - [x] RAM
    
    - [ ] ROM
    
@@ -60,15 +60,15 @@
    
    - [ ] copy startup-config running-config
    
-   - [ ] copy running-config startup-config
+   - [x] copy running-config startup-config
 
 6. A switch user is currently in console line configuration mode. Which of the following would place the user in enable mode? (Choose two answers.)
    
    - [ ] Using the exit command once
    
-   - [ ] Using the end command once
+   - [x] Using the end command once
    
-   - [ ] Pressing the Ctrl+Z key sequence once
+   - [x] Pressing the Ctrl+Z key sequence once
    
    - [ ] Using the quit command
 
@@ -78,7 +78,7 @@
 
 1. Which of the following statements describes part of the process of how a switch decides to forward a frame destined for a known unicast MAC address ?
    
-   - [ ] It compares the unicast destination address to the bridging, or MAC address, table.
+   - [x] It compares the unicast destination address to the bridging, or MAC address, table.
    
    - [ ] It compares the unicast source address to the bridging, or MAC address, table.
    
@@ -95,7 +95,7 @@
    
    - [ ] It compares the unicast source address to the bridging, or MAC address, table.
    
-   - [ ] It forwards the frame out all interfaces in the same VLAN except for the incoming
+   - [x] It forwards the frame out all interfaces in the same VLAN except for the incoming
      interface.
    
    - [ ] It compares the destination IP address to the destination MAC address.
@@ -104,7 +104,7 @@
 
 3. Which of the following statements best describes what a switch does with a frame destined for an unknown unicast address?
    
-   - [ ] It forwards out all interfaces in the same VLAN except for the incoming interface.
+   - [x] It forwards out all interfaces in the same VLAN except for the incoming interface.
    
    - [ ] It forwards the frame out the one interface identified by the matching entry in the MAC address table.
    
@@ -116,7 +116,7 @@
    
    - [ ] It compares the unicast destination address to the bridging, or MAC address, table.
    
-   - [ ] It compares the unicast source address to the bridging, or MAC address, table.
+   - [x] It compares the unicast source address to the bridging, or MAC address, table.
    
    - [ ] It compares the VLAN ID to the bridging, or MAC address, table.
    
@@ -130,7 +130,7 @@
    
    - [ ] Port Fast Ethernet 0/11 is in a connected state.
    
-   - [ ] Port Fast Ethernet 0/5 is in a connected state.
+   - [x] Port Fast Ethernet 0/5 is in a connected state.
    
    - [ ] Port Ethernet 0/15 is in a notconnected state.
 
@@ -146,7 +146,7 @@
    
    - [ ] The three listed MAC addresses were learned based on the destination MAC address of frames forwarded by the switch.
    
-   - [ ] 02CC.CCCC.CCCC was learned from the source MAC address of a frame that entered port Gi0/3.
+   - [x] 02CC.CCCC.CCCC was learned from the source MAC address of a frame that entered port Gi0/3.
 
 ## 3. Cấu hình cơ bản về quản lí Swith
 
@@ -156,7 +156,7 @@
    
    - [ ] enable password
    
-   - [ ] enable secret
+   - [x] enable secret
    
    - [ ] Neither
    
@@ -164,7 +164,7 @@
 
 2. An engineer wants to set up simple password protection with no usernames for someswitches in a lab, for the purpose of keeping curious coworkers from logging in to the lab switches from their desktop PCs. Which of the following commands would be a useful part of that configuration?
    
-   - [ ] A login vty mode subcommand
+   - [x] A login vty mode subcommand
    
    - [ ] A password password console subcommand
    
@@ -176,9 +176,9 @@
    
    - [ ] A username name secret password vty mode subcommand
    
-   - [ ] A username name secret password global configuration command
+   - [x] A username name secret password global configuration command
    
-   - [ ] A login local vty mode subcommand
+   - [x] A login local vty mode subcommand
    
    - [ ] A transport input ssh global configuration command
 
@@ -187,25 +187,25 @@
 4. An engineer’s desktop PC connects to a switch at the main site. A router at the main site connects to each branch office through a serial link, with one small router and switch at each branch. Which of the following commands must be configured on the branch office switches, in the listed configuration mode, to allow the engineer to telnet to the branch office switches and supply only a password to login? (Choose three
    answers.)
    
-   - [ ] The ip address command in interface configuration mode
+   - [x] The ip address command in interface configuration mode
    
    - [ ] The ip address command in global configuration mode
    
    - [ ] The ip default-gateway command in VLAN configuration mode
    
-   - [ ] The ip default-gateway command in global configuration mode
+   - [x] The ip default-gateway command in global configuration mode
    
    - [ ] The password command in console line configuration mode
    
-   - [ ] The password command in vty line configuration mode
+   - [x] The password command in vty line configuration mode
 
 5. A Layer 2 switch configuration places all its physical ports into VLAN 2. The IP addressing plan shows that address 172.16.2.250 (with mask 255.255.255.0) is reserved for use by this new LAN switch and that 172.16.2.254 is already configured on the router connected to that same VLAN. The switch needs to support SSH connections into the switch from any subnet in the network. Which of the following commands are part of the required configuration in this case? (Choose two answers.)
    
    - [ ] The ip address 172.16.2.250 255.255.255.0 command in interface vlan 1 configuration mode.
    
-   - [ ] The ip address 172.16.2.250 255.255.255.0 command in interface vlan 2 configuration mode.
+   - [x] The ip address 172.16.2.250 255.255.255.0 command in interface vlan 2 configuration mode.
    
-   - [ ] The ip default-gateway 172.16.2.254 command in global configuration mode.
+   - [x] The ip default-gateway 172.16.2.254 command in global configuration mode.
    
    - [ ] The switch cannot support SSH because all its ports connect to VLAN 2, and the IP address must be configured on interface VLAN 1.
 
@@ -213,7 +213,7 @@
 
 6. Which of the following line subcommands tells a switch to wait until a show command’s output has completed before displaying log messages on the screen?
    
-   - [ ] logging synchronous
+   - [x] logging synchronous
    
    - [ ] no ip domain-lookup
    
@@ -237,7 +237,7 @@
    
    - [ ] Configure the duplex full interface subcommand
    
-   - [ ] Configure the speed 100 and duplex full interface subcommands
+   - [x] Configure the speed 100 and duplex full interface subcommands
 
 2. In which of the following modes of the CLI could you configure the duplex setting for interface Fast Ethernet 0/5?
    
@@ -249,47 +249,41 @@
    
    - [ ] VLAN mode
    
-   - [ ] Interface configuration mode
+   - [x] Interface configuration mode
 
 3. A Cisco Catalyst switch connects with its Gigabit0/1 port to an end user’s PC. The end user, thinking the user is helping, manually sets the PC’s OS to use a speed of 1000Mbps and to use full duplex, and disables the use of autonegotiation. The switch’s G0/1 port has default settings for speed and duplex. What speed and duplex settings will the switch decide to use? (Choose two answers.)
    
-   - [ ] Full duplex
+   - [x] Full duplex
    
    - [ ] Half duplex
    
    - [ ] 10 Mbps
    
-   - [ ] 1000 Mbps
+   - [x] 1000 Mbps
 
 ### Phân tích trạng thái và thống kê Switch Interface
 
 4. The output of the show interfaces status command on a 2960 switch shows interface Fa0/1 in a “disabled” state. Which of the following is true about interface Fa0/1? (Choose three answers.)
    
-   - [ ] The interface is configured with the shutdown command.
+   - [x] The interface is configured with the shutdown command.
    
-   - [ ] The show interfaces fa0/1 command will list the interface with two status codes of administratively down and line protocol down.
+   - [x] The show interfaces fa0/1 command will list the interface with two status codes of administratively down and line protocol down.
    
    - [ ] The show interfaces fa0/1 command will list the interface with two status codes of up and down.
    
-   - [ ] The interface cannot currently be used to forward frames.
+   - [x] The interface cannot currently be used to forward frames.
    
    - [ ] The interface can currently be used to forward frames.
 
 5. Switch SW1 uses its Gigabit 0/1 interface to connect to switch SW2’s Gigabit 0/2 interface. SW2’s Gi0/2 interface is configured with the speed 1000 and duplex full commands. SW1 uses all defaults for interface configuration commands on its Gi0/1 interface. Which of the following are true about the link after it comes up? (Choose two answers.)
    
-   6. 
-      a. SW2’s G0/1 has been configured with a shutdown interface subcommand.
-      b. The two switches have been configured with different values on the speed interface
-      subcommand.
-      c. A duplex mismatch exists with SW1 set to full duplex.
-      d. A duplex mismatch exists with SW1 set to half duplex.
-   - [ ] The link works at 1000 Mbps (1 Gbps).
+   - [x] The link works at 1000 Mbps (1 Gbps).
    
    - [ ] SW1 attempts to run at 10 Mbps because SW2 has effectively disabled IEEE standard autonegotiation.
    
    - [ ] The link runs at 1 Gbps, but SW1 uses half duplex and SW2 uses full duplex.
    
-   - [ ] Both switches use full duplex.
+   - [x] Both switches use full duplex.
 
 6. Switch SW1 connects via a cable to switch SW2’s G0/1 port. Which of the following conditions is the most likely to cause SW1’s late collision counter to continue to increment?
    
@@ -300,10 +294,4 @@
    
    - [ ] A duplex mismatch exists with SW1 set to full duplex.
    
-   - [ ] A duplex mismatch exists with SW1 set to half duplex.
-   
-   - [ ] 
-   
-   - [ ] 
-   
-   - [ ] 
+   - [x] A duplex mismatch exists with SW1 set to half duplex.
