--- a/docs/cosonganh/CT112-Mang_may_tinh/Tailieu/1.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Tailieu/1.md
@@ -1,19 +1,105 @@
-# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/07/27-15-40-48-icons8-wired_network_connection.png" width="50"> Bài 4: Mạng máy tính
+# Chương 1. Tổng quan MMT
 
-## I.Giới thiệu
+## Bài 1: Mạng điện báo
+
+### 1.Giới thiệu
+
+Là mạng sử dụng hệ thống mã `Morse` để mã hóa thông tin truyền đi.
+
+::: tip 💡 FACT 
+
+Mã `Morse` sử dụng hai tín hiệu `tít` (•) và `te` (**-**) có độ dài ngắn khác nhau để truyền thông tin 
+
+- Bên gửi sẽ lần lượt mã hóa từng ký tự của mã `Morse`
+
+- Bên nhận sẽ thực hiện giải mã
+
+==> Văn bản truyền đi gọi là `message` hay `telegram`
+:::
+
+### 2.Lịch sử
+
+Vào năm `1851`, mạng thư tín đầu tiên được sử dụng để nối hai thành phố `London` và `Paris` ==> Sau đó mở rộng thành toàn **Châu Âu**
+
+### 3.Cấu trúc
+
+Gồm `2` thành phần được nối lại với nhau bằng hệ thống dây dẫn truyền
+
+- Trạm điện báo (*`Telegraph Station`*) : cho phép truyền và nhận các thông điệp dạng mã `Morse`
+
+- Trạm chuyển điện báo (*`Telegraph Switching`*) : cho phép nhiều `trạm điện báo` sử dụng chung một đường truyền
+  
+::: tip 💡 FACT 
+
+- Tại `trạm chuyển điện báo` có một thao tác viên  nhận các điện báo gửi tới, xác định nơi cần chuyển tới `trạm điện báo`.
+
+- Nếu đường truyền nơi nhận đang được sử dụng, thao tác viên sẽ lưu lại và truyền đi khi đường truyền rãnh
+:::
+
+### 4.Cải thiện
+
+Để **tăng tốc độ truyền tin** thì : 
+
+1. Hệ thống `Baudot` thay thế mã `Morse` bằng nhị phân `5 bits` (*có thể mã hóa cho `32` ký tự*)
+
+2. Các trạm điện báo được thay thế bằng máy `teletype terminal` 
+
+3. Hệ thống sử dụng kỹ thuật biến điệu (*`Modulation`*) và đa hợp (*`Multiplexing`*) để truyền tải thông tin
+
+## Bài 2: Mạng điện thoại:
+
+### 1.Giới thiệu
+
+Truyền thông tin dưới dạng **âm thanh** bằng cách sử dụng **hệ thống truyền tín hiệu tuần tự**.
+
+### 2.Hoạt động
+
+Dựa theo chế độ **chuyển mạch định hướng nối kết** (*`Circuit switching`*) ==> tức là thiết lập đường nối kết giữa hai bên giao tiếp trước khi thông tin được truyền đi (*`connection oriented`*)
+
+::: tip <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/02-22-22-32-icons8-object.png" width="25"> MÔ HÌNH
+
+<br>
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/07/25-13-16-04-output-onlinepngtools.png" title="" alt="outputonlinepngtoolspng" width="576">
+:::
+
+
+## Bài 3: Mạng hướng đầu cuối 
+
+### 1.Giới thiệu
+
+Mô hình của các hệ thống máy tính lớn (*`MainFrame`*) vào những năm `1970`
+
+### 2.Hoạt động
+
+Gồm một máy chủ mạnh (*`Host`*) có khả năng tính toán cao **nối kết** với nhiều thiết bị đầu cuối đần độn (*`Dumb terminal`*) 
+
+==> Để xuất nhập thông tin và giao tiếp với người dùng 
+
+::: tip <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/02-22-22-32-icons8-object.png" width="25"> MÔ HÌNH
+
+<br>
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/07/26-23-39-18-Screen_Shot_2021-07-26_at_23.38.38-removebg-preview.png" width="500">
+:::
+
+
+## Bài 4: Mạng máy tính
+
+### 1.Giới thiệu
 
 Là mạng của **2 hay nhiều** máy tính được **nối** lại với nhau bằng đường truyền vật lý theo một kiến trúc nào đó.
 
-## II.Mô hình Mạng
+### 2.Mô hình Mạng
 
-### 1.Mô hình đơn giản
+#### Mô hình đơn giản
 
 ::: tip <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/02-22-22-32-icons8-object.png" width="25"> MÔ HÌNH ĐƠN GIẢN
 
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/07/27-14-49-55-Screen_Shot_2021-07-27_at_14.49.29-removebg-preview.png" width="500">
 :::
 
-### 2.Mô hình phức tạp
+#### Mô hình phức tạp
 
 Gồm nhiều **mạng đơn giản** nối lại với nhau gồm `3` thành phần sau : 
 
@@ -30,7 +116,7 @@ Gồm nhiều **mạng đơn giản** nối lại với nhau gồm `3` thành ph
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/07/27-14-53-45-Screen_Shot_2021-07-27_at_14.53.13-removebg-preview.png" width="400">
 :::
 
-## III.Đường biên mạng
+### 3.Đường biên mạng
 
 Gồm các `Host` trên mạng nơi thực thi các `Network Application`. 
 
@@ -52,7 +138,7 @@ Quá trình trao đổi thông tin giữa **2** máy trên mạng có thể theo
 2. Mô hình **ngang hàng** (`Peer to peer`)
 :::
 
-### 1.Mô hình `Client-Server`
+#### Mô hình `Client-Server`
 
 Một máy tính đóng vai trò là `Client` và một máy đóng vai trò là `Server`.
 
@@ -72,13 +158,13 @@ Một máy tính đóng vai trò là `Client` và một máy đóng vai trò là
 
 ==> Một số ứng dụng phổ biến : `wwww`, `mail`, `ftp`...
 
-### 2.Mô hình `Peer to peer`
+#### Mô hình `Peer to peer`
 
 Một máy tính vừa đóng vai trò là `Client` vừa là `Server`.
 
 ==> MỘt số ứng dụng phổ biến : `Gnutella`, `KazaA`...
 
-## IV.Đường trục mạng
+### 4.Đường trục mạng
 
 Là hệ thống mạng của các `Routers` làm nhiệm vụ chọn đường và chuyển tiếp thông tin giữa hai máy tính nằm trên 2 nhánh mạng cách xa nhau.
 
@@ -98,7 +184,7 @@ Sử dụng một trong hai chế độ sau để truyền thông tin trên mạ
 2. Chuyển gói (*`Package switching`*) 
 :::
 
-### 1.Chuyển mạch
+#### Chuyển mạch
 
 Hoạt động theo mô hình **hệ thống điện thoại**. 
 
@@ -121,7 +207,8 @@ Việc phân chia băng thông có 2 kỹ thuật phổ biến như sau :
 
 2. Chia theo thời gian (*`TDMA`* - `TIme Division Multi Access`)
 :::
-### 2.Mạng chuyển gói
+
+#### Mạng chuyển gói
 
 Thông tin được trao đổi qua hai máy tính được phân thành những `package` có kích thước tối đa xác định.
 
@@ -140,7 +227,7 @@ Thông tin được trao đổi qua hai máy tính được phân thành những
 
 Trong trường hợp này, các `routers` sẽ **giải thuật lưu** và **chuyển tiếp** (`Store and Forward`) tức là lưu lại các `package` nào rãnh kênh truyền thì gửi đi sau
 :::
-### 3. So sánh 2 chế độ truyền mạng
+#### So sánh 2 chế độ truyền mạng
 
 Chuyển gói cho phép có nhiều người sử dụng mạng hơn
 
@@ -162,7 +249,7 @@ Chuyển gói cho phép có nhiều người sử dụng mạng hơn
 
 - **Khuyết điểm**: Khi bị tắt nghẽn sẽ mất hết dữ liệu, không đảm bảo được băng thông cố định
 :::
-### 4. Mạng truy cập
+#### Mạng truy cập
 
 Cho phép kết nối các máy tính vào các `router` ngoài biên.
 
@@ -181,14 +268,10 @@ Có thể là những loại mạng sau :
 
 - Mạng không dây
 
-## V.Lợi ích mạng máy tính
+### 5.Lợi ích mạng máy tính
 
 | 1.Dùng chung tài nguyên                                                                        | 2.Tăng độ tin cậy                                                                                  | 3.Tăng hiệu suất làm việc                                                        | 4.Tiết kiệm chi phí                                                            | 5.Bảo mật thông tin                         | 6.Phát triển ứng dụng mới                                     |
 | ---------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------- | ------------------------------------------------------------------------------ | ------------------------------------------- | ------------------------------------------------------------- |
 | Có thể sử dụng chung tài nguên giữa các máy tính với nhau mà không cần phải lưu trữ nhiều nơi. | Thực hiện một chương trình tại nhiều máy khác nhau, tránh tình trạng sai sót do nhân viên kỹ thuật | Bỏ qua những khâu đối chiếu không cần thiết                                      | Giảm chi phí các trang thiết bị trên số người dùng                             | Các dữ liệu được bảo mật trên `file server` | Ngày càng phát triển tạo ra các sản phẩm mới về mạng          |
 | Mỗi lần thay đổi thông tin tất cả người dùng đều cập nhật và biết.                             | Dễ dàng xác định được thiết bị nào hư hỏng để tiến hành sửa chữa ngay sau đó                       | Tiết kiệm thời gian cài đặt phần mềm trên mỗi máy (*Vì có thể làm hàng loạt*)    | Về phần mềm ta có thể mua những ấn bản cho nhiều người dùng cho chi phí rẻ hơn | Tăng tính an toàn so với các máy cá nhân    | Các sản phẩm ứng dụng có khả năng truy cập trên toàn thế giới |
 | Chi phí giảm và dễ bảo quản                                                                    |                                                                                                    | Việc `Backup` có thể giao cho một người chứ không cần phải mỗi người tự `Backup` |                                                                                |                                             |                                                               |
-
----
-
-#### <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/02-22-18-48-tenor.gif" width="50">[Nhấn vào đây để thảo luận](/cosonganh/CT112-Mang_may_tinh/Tailieu/Chapter1/)
