--- a/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Thuchanh/4.md
+++ b/docs/chuyennganh/CT293-Mang_va_truyen_thong_du_lieu/Thuchanh/4.md
@@ -1,1 +1,101 @@
 # Lab4
+
+## 1. Cấu hình IPv6 - Phần 1
+
+::: tip 💡 GUIDE
+
+<div class="videoZen">
+  <iframe src="https://www.youtube.com/embed/BdsIahtrWIA?list=PLxbwE86jKRgMpuZuLBivzlM8s2Dk5lXBQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+:::
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/03/07-22-36-06-icons8-questions.png"  width="35"> Sử dụng file `Lab04-01-IPv6 Configuration Part 1.pkt`, thực hiện:
+> 
+> `IPv4` được cấu hình thành công trên các thiết bị. Thực hiện cấu hình `IPv6` để hỗ trợ song song `IPv4` và `IPv6`
+> 
+> - Bật `IPv6` routing trên `R1`.
+> 
+> - Cấu hình địa chỉ `IPv6` phù hợp cho `R1`. Hiển thị `running-configuration` của `R1` (<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/15-13-33-44-icons8-screenshot.png" width="30"> *Chụp hình minh hoạ*)
+> 
+> - Cấu hình địa chỉ `IPv6` của các `PC` 
+>   
+>   ::: warning ⚠️ LƯU Ý
+>   
+>   Cấu hình địa chỉ `default gateway` phù hợp
+>   
+>   :::
+> 
+> - Kiểm tra nối kết mạng giữa các `PC` (`IPv4` và `IPv6`) bằng lệnh `ping` (<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/15-13-33-44-icons8-screenshot.png" width="30"> *Chụp hình minh hoạ*)
+
+## 2. Cấu hình IPv6 - Phần 2
+
+::: tip 💡 GUIDE
+
+<div class="videoZen">
+  <iframe src="https://www.youtube.com/embed/Zfhpd7dl6QI?list=PLxbwE86jKRgMpuZuLBivzlM8s2Dk5lXBQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+:::
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/03/07-22-36-06-icons8-questions.png"  width="35"> Sử dụng file `Lab04-02-IPv6 Configuration Part 2.pkt`, thực hiện:
+> 
+> - Sử dụng `EUI-64` để cấu hình địa chỉ `IPv6 `cho **interface G0/1** của router `R1/R2`.
+> 
+> - Cấu hình địa chỉ `IPv6` cho các `PC`, lưu ý cấu hình địa chỉ `default gateway` phù hợp.
+> 
+> - Bật `IPv6` cho **interface G0/0** của router `R1/R2` mà không cần cấu hình địa chỉ cụ thể. Hiển thị `running-configuration` của `R1` và `R2` (<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/15-13-33-44-icons8-screenshot.png" width="30"> *Chụp hình minh hoạ*)
+> 
+> - Cấu hình vạch đường tĩnh cho router `R1/R2` cho `PC1` ping `PC2` (<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/15-13-33-44-icons8-screenshot.png" width="30"> *Chụp hình minh hoạ*)
+
+## 3. Xem vạch đường tĩnh IPv6
+
+::: tip 💡 GUIDE
+
+<div class="videoZen">
+  <iframe src="https://www.youtube.com/embed/WSBEVFANMmc?list=PLxbwE86jKRgMpuZuLBivzlM8s2Dk5lXBQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+:::
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/03/07-22-36-06-icons8-questions.png"  width="35"> Sử dụng file `Lab04-03-IPv6 Static Routes.pkt`, thực hiện:
+> 
+> `IPv6` đã được cấu hình thành công trên các **routers**. Các nối kết **serial** chỉ sử dụng địa chỉ `link-local`.
+> 
+> - Bật `IPv6 routing` trên các **router**.
+> 
+> - Sử dụng `SLAAC` để cấu hình địa chỉ `IPv6` cho các `PC`. Địa chỉ nào đã được sử dụng? (<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/15-13-33-44-icons8-screenshot.png" width="30"> *Chụp hình minh hoạ*)
+> 
+> - Cấu hình vạch đường tĩnh cho các **router** để `PC1` **ping** tới được `PC2` (<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/15-13-33-44-icons8-screenshot.png" width="30"> *Chụp hình minh hoạ*)
+>   
+>   ::: warning ⚠️ LƯU Ý 
+>   
+>   Đường mạng qua R2 được sử dụng như đường dự phòng.
+>   
+>   :::
+> 
+> - Hiển thị `running-configuration` của các **router** (<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/15-13-33-44-icons8-screenshot.png" width="30"> *Chụp hình minh hoạ*)
+
+## 4. Wireless LAN
+
+::: tip 💡 GUIDE
+
+<div class="videoZen">
+  <iframe src="https://www.youtube.com/embed/Il8ev78fcqw?list=PLxbwE86jKRgMpuZuLBivzlM8s2Dk5lXBQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+:::
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/03/07-22-36-06-icons8-questions.png"  width="35"> Sử dụng file `Lab04-04-Wireless LANs.pkt,`, thực hiện:
+> 
+> - Sử dụng trình duyệt web trên `PC1` truy cập (`HTTPS`) vào `GUI` của `WLC1`
+>   
+>   ```textile
+>   Username: admin
+>   Password: Cisco123
+>   ```
+> 
+> - Làm quen với giao diện `GUI` của `WLC`
+> 
+> - Cấu hình d**ynamic interface** cho **Internal & Guest WLANs** (<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/15-13-33-44-icons8-screenshot.png" width="30"> *Chụp hình minh hoạ*)
+> 
+> - Tạo **Internal & Guest WLANs** sử dụng `WPA2+PSK` (<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/15-13-33-44-icons8-screenshot.png" width="30"> *Chụp hình minh hoạ*)
+> 
+> - Thêm 1 thiết bị **wireless client** và kết nối với **AP**. Thiết bị có thể `ping` tới `PC1` không ? (<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/02/15-13-33-44-icons8-screenshot.png" width="30"> *Chụp hình minh hoạ*)
